--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Login.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>index</title>
+    <title>Join.vn</title>
 </head>
 <body>
     <div class="wrapper">
