--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/CollectionItem.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/CollectionItem.cshtml
@@ -14,7 +14,7 @@
             <div class="row">
                 <h2 class="col-sm-10">Quản lý @(Model.Name.ToLower())</h2>
                 <div class="col-sm-2">
-                    <button class="btn btn-custom" type="submit" data-toggle="modal" data-target="#collectionItemModal" style="margin-top:20px" onclick="clearModal()">
+                    <button class="btn btn-custom" type="submit" data-toggle="modal" data-target="#collectionItemAddModal" style="margin-top:20px" onclick="clearModal()">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
@@ -38,7 +38,7 @@
 </div>
 
 <!--Add Collection Item Modal-->
-<div class="modal fade" id="collectionItemModal" role="dialog">
+<div class="modal fade" id="collectionItemAddModal" role="dialog">
     <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -56,9 +56,9 @@
                         </div>
                         <input id="txtName" type="text" class="form-control speaker-title" placeholder="Nhập tên thành phần">
                     </div>
-                    <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="speaker-name-error">
-                        <p class="empty">Vui lòng nhập tên của thành phần</p>
-                    </div>
+                    <p id="errorNameAdd" class="empty empty col-lg-offset-3">Vui lòng nhập tên thành phần</p>
+
+                   
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 form-control-label">Miêu Tả:</label>
@@ -68,9 +68,8 @@
                         </div>
                         <textarea id="txtDescription" type="text" class="form-control speaker-description" placeholder="Nhập miêu tả về thành phần"></textarea>
                     </div>
-                    <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="speaker-description-error">
-                        <p class="empty">Vui lòng nhập miêu tả của thành phần</p>
-                    </div>
+                    <p id="errorDesAdd" class="empty empty col-lg-offset-3">Vui lòng nhập miêu tả của thành phần</p>
+
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 form-control-label">Hình Ảnh:</label>
@@ -89,7 +88,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="btnAdd" type="button" class="btn btn-primary speaker-id speaker-button" data-dismiss="modal" style="margin-top:5px">Thêm</button>
+                <button id="btnAdd" type="button" class="btn btn-primary speaker-id speaker-button" style="margin-top:5px">Thêm</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
@@ -116,9 +115,8 @@
                         </div>
                         <input id="txtNameEdit" type="text" class="form-control speaker-title" placeholder="Nhập tên thành phần">
                     </div>
-                    <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="collectionItemNameError">
-                        <p class="empty">Vui lòng nhập tên của thành phần</p>
-                    </div>
+                    <p id="errorNameEdit" class="empty empty col-lg-offset-3">Vui lòng nhập tên thành phần</p>
+
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 form-control-label">Miêu Tả:</label>
@@ -128,9 +126,8 @@
                         </div>
                         <textarea id="txtDescriptionEdit" type="text" class="form-control speaker-description" placeholder="Nhập miêu tả về thành phần"></textarea>
                     </div>
-                    <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="collectionItemDesEditError">
-                        <p class="empty">Vui lòng nhập miêu tả của thành phần</p>
-                    </div>
+                    <p id="errorDesEdit" class="empty empty col-lg-offset-3">Vui lòng nhập miêu tả của thành phần</p>
+
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-3 form-control-label" style="padding-left: 30px;">Hình Ảnh:</label>
@@ -149,7 +146,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="btnEdit" type="button" class="btn btn-primary speaker-id speaker-button" data-dismiss="modal" data-target="#collectionItemEditModal" style="margin-top:5px">Thêm</button>
+                <button id="btnEdit" type="button" class="btn btn-primary speaker-id speaker-button" data-target="#collectionItemEditModal" style="margin-top:5px">Thêm</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
@@ -205,7 +202,8 @@
                     {
                         name: "Image",
                         render: function (data, type, row) {
-                            if (row.ImageUrl != null) {
+                            console.log(row);
+                            if (row.ImageUrl != 'null') {
                                 if (checkURL(row.ImageUrl)) {
                                     return '<img src="' + row.ImageUrl + '" alt="brand" class="img-fluid" style="width:260px; height:200px;">';
                                 }
@@ -286,24 +284,22 @@
         });
 
         $('#btnAdd').on('click', function () {
+            clearErrorAddCollectionItem();
+
             var isValid = true;
             var name = $('#txtName').val();
             var description = $('#txtDescription').val();
             var imageUrl = $('#thumbnailContainer img').attr('src');
             
             if (name.trim().length == 0) {
-                $('#speaker-name-error').css('display', 'block');
-                $('#btnAdd').attr('data-dismiss', null);
+                $('#errorNameAdd').css('display', 'block');
                 isValid = false;
             }
             if (description.trim().length == 0) {
-                $('#speaker-description-error').css('display', 'block');
-                $('#btnAdd').attr('data-dismiss', null);
+                $('#errorDesAdd').css('display', 'block');
                 isValid = false;
             }
             if (isValid) {
-                $('#speaker-name-error').css('display', 'none');
-                $('#btnAdd').attr('data-dismiss', 'modal');
                 $.ajax({
                     url: '@Url.Action("AddNewCollectionItem", "ManageEvent")',
                     method: "POST",
@@ -321,10 +317,13 @@
                         console.log(data);
                     }
                 });
+                $('#collectionItemAddModal').modal('hide');
             }
         });
 
         $('#btnEdit').on('click', function () {
+            clearErrorEditCollectionItem();
+
             var isValid = true;
             var collectionItemId = $(this).attr('value');
             var name = $('#txtNameEdit').val();
@@ -332,19 +331,16 @@
             var imageUrl = $('#thumbnailContainerEdit img').attr('src');
             
             if (name.trim().length == 0) {
-                $('#collectionItemNameError').css('display', 'block');
-                $('#btnEdit').attr('data-dismiss', null);
+                $('#errorNameEdit').css('display', 'block');
                 isValid = false;
             }
             if (description.trim().length == 0) {
-                $('#collectionItemDesEditError').css('display', 'block');
-                $('#btnEdit').attr('data-dismiss', null);
+                $('#errorDesEdit').css('display', 'block');
+               
                 isValid = false;
             }
             if (isValid) {
-                $('#collectionItemNameError').css('display', 'none');
-                $('#collectionItemDesEditError').css('display', 'none');
-                $('#btnEdit').attr('data-dismiss', 'modal');
+                
                 $.ajax({
                     url: '@Url.Action("UpdateCollectionItem", "ManageEvent")',
                     method: "POST",
@@ -362,6 +358,7 @@
                         console.log(data);
                     }
                 });
+                $('#collectionItemEditModal').modal('hide');
             }
         });
 
@@ -417,6 +414,16 @@
 
         function reloadTable() {
             $('#tblCollectionItem').DataTable().ajax.reload();
+        }
+
+        function clearErrorAddCollectionItem() {
+            $('#errorNameAdd').css('display', 'none');
+            $('#errorDesAdd').css('display', 'none');
+        }
+
+        function clearErrorEditCollectionItem() {
+            $('#errorNameEdit').css('display', 'none');
+            $('#errorDesEdit').css('display', 'none');
         }
     </script>
 }
