--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
@@ -76,6 +76,7 @@
                         </div>
                         <input id="editName" type="text" class="form-control" placeholder="Nhập tên của hỏi đáp">
                     </div>
+
                     <p class="empty col-lg-offset-3" id="emptyWarningEdit">Vui lòng nhập tên hỏi đáp!</p>
                    
                 </div>
@@ -149,9 +150,7 @@
                         </div>
                         <input id="newName" type="text" class="form-control" placeholder="Nhập tên của hỏi đáp">
                     </div>
-                    <div class="col-lg-offset-3 col-lg-9 div-name-error">
-                        <p class="empty" id="emptyWarning">Vui lòng nhập tên hỏi đáp!</p>
-                    </div>
+                    <p class="col-lg-offset-3 empty" id="emptyWarning">Vui lòng nhập tên hỏi đáp!</p>
                 </div>
                 <div class="modal-footer">
                     <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Thêm</button>
@@ -361,7 +360,7 @@
             function delQA(qaId) {
                 swal({
                     title: "Bạn có chắc?",
-                    text: "Phần đặt câu hỏi này sẽ bị xóa",
+                    text: "Bạn sẽ không thể phục hồi lại!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
